--- a/www/src/top-nav.include.html
+++ b/www/src/top-nav.include.html
@@ -1,30 +1,30 @@
 <div id="top-nav hidden-print">
     <ul class="nav nav-pills" id="top-nav">
-        <li page-id="home">
-            <a href="home.html">
+        <li class="${name=='index' ? 'active' : ''}">
+            <a href="index.html">
                 <span class="glyphicon glyphicon-home"> </span>
                 Home
             </a>
         </li>
-        <li page-id="download">
+        <li class="${name=='download' ? 'active' : ''}">
             <a href="download.html">
                 <span class="glyphicon glyphicon-save"> </span>
                 Get Woko
             </a>
         </li>
-        <li page-id="tutorial">
+        <li class="${name=='tutorial' ? 'active' : ''}">
             <a href="tutorial.html">
                 <span class="glyphicon glyphicon-sort-by-alphabet"> </span>
                 Tutorial
             </a>
         </li>
-        <li page-id="videos">
+        <li class="${name=='videos' ? 'active' : ''}">
             <a href="videos.html">
                 <span class="glyphicon glyphicon-film"> </span>
                 Videos
             </a>
         </li>
-        <li page-id="developer-guide">
+        <li class="${name=='developer-guide' ? 'active' : ''}">
             <a href="developer-guide.html">
                 <span class="glyphicon glyphicon-wrench"> </span>
                 Dev. Guide
@@ -37,25 +37,25 @@
             </a>
             <ul class="dropdown-menu">
                 <li>
-                    <a href="#">
+                    <a href="https://groups.google.com/forum/?fromgroups#!forum/pojosontheweb">
                         <span class="glyphicon glyphicon-comment"> </span>
                         Discuss
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/pojosontheweb/woko/issues">
                         <span class="glyphicon glyphicon-exclamation-sign"> </span>
                         Issues
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/pojosontheweb/woko">
                         <span class="glyphicon glyphicon-cog"> </span>
                         GitHub
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="http://ci.rvkb.com/job/woko-develop/">
                         <span class="glyphicon glyphicon-repeat"> </span>
                         Jenkins CI
                     </a>
