some cleanup, removed videos

--- a/www/src/top-nav.include.html
+++ b/www/src/top-nav.include.html
@@ -1,3 +1,16 @@
+Author: Rémi Vankeisbelck
+Alexis Boissonnat
+CSS: css/bootstrap.css
+CSS: css/doko.css
+HTML header:  <script type="text/javascript"
+                      src="js/jquery.min.js">
+</script>
+HTML header:  <script type="text/javascript"
+                      src="js/bootstrap.js">
+</script>
+HTML header:  <meta name="google-site-verification" content="KuGGUij04tpkJKwI3ZN5H7GyoGqSkXaltuHJUW4Y5as"/>
+
+
 <div id="top-nav hidden-print">
     <ul class="nav nav-pills" id="top-nav">
         <li class="${name=='index' ? 'active' : ''}">
@@ -9,19 +22,13 @@
         <li class="${name=='download' ? 'active' : ''}">
             <a href="download.html">
                 <span class="glyphicon glyphicon-save"> </span>
-                Get Woko
+                Download
             </a>
         </li>
         <li class="${name=='tutorial' ? 'active' : ''}">
             <a href="tutorial.html">
                 <span class="glyphicon glyphicon-sort-by-alphabet"> </span>
                 Tutorial
-            </a>
-        </li>
-        <li class="${name=='videos' ? 'active' : ''}">
-            <a href="videos.html">
-                <span class="glyphicon glyphicon-film"> </span>
-                Videos
             </a>
         </li>
         <li class="${name=='developer-guide' ? 'active' : ''}">
