--- a/www/src/top-nav.include.html
+++ b/www/src/top-nav.include.html
@@ -14,7 +14,7 @@ HTML header:  <meta name="google-site-verification" content="KuGGUij04tpkJKwI3ZN
 <div id="top-nav hidden-print">
     <ul class="nav nav-pills" id="top-nav">
         <li class="${name=='index' ? 'active' : ''}">
-            <a href="index.html">
+            <a href="http://pojosontheweb.com">
                 <span class="glyphicon glyphicon-home"> </span>
                 Home
             </a>
