begins to look good

--- a/www2/index.html
+++ b/www2/index.html
@@ -11,13 +11,12 @@
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link href="css/styles.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Seymour+One|Fredericka+the+Great|Montserrat+Alternates|Skranji|Open+Sans|Architects+Daughter|Freckle+Face|Capriola|Faster+One' rel='stylesheet' type='text/css'>
-</head>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates|Open+Sans|Freckle+Face|Faster+One' rel='stylesheet' type='text/css'></head>
 <body>
 
 <div class="jumbotron">
     <h1>POJOs on the Web!</h1>
-    <p>Java. Open-Source.<p>
+    <p>Open-Source food for the Java Platform.<p>
 </div>
 
 
@@ -26,11 +25,11 @@
         <div class="col-md-4 woko col text-center">
             <img src="img/woko-white.png" style="width:50%"/>
         </div>
-        <div class="col-md-4 findr col">
-            <h2>Findr</h2>
+        <div class="col-md-4 findr col text-center">
+            <img src="img/findr-white.png" style="width:50%"/>
         </div>
-        <div class="col-md-4 stuff col">
-            <h2>Stuff</h2>
+        <div class="col-md-4 stuff col text-center">
+            <img src="img/goodies-white.png" style="width:50%"/>
         </div>
     </div>
 
@@ -38,7 +37,16 @@
 
 <div class="content">
     <div class="container-fluid woko" id="sectionWoko">
-        <div class="row-fluid">
+        <p>
+            Woko is a Full-Stack, Domain Driven Web Framework for the Java platform.
+            It builds upon strong foundations and mixes in unique concepts, providing a
+            developer experience that ain't so common in the Java landscape.
+        </p>
+        <p>
+            We are pragmatic, and we eat our own dog food.
+            We try to make it simple and effective, just as it should be.
+        </p>
+        <div class="row">
             <div class="col-md-6">
                 <h3>
                     Persistence
@@ -59,7 +67,7 @@
                 </p>
             </div>
         </div>
-        <div class="row-fluid">
+        <div class="row">
             <div class="col-md-6">
                 <h3>
                     Object Renderer
@@ -81,12 +89,17 @@
                 </p>
             </div>
         </div>
+        <div class="text-center more">
+            <a href="#">
+                Get Woko
+            </a>
+        </div>
     </div>
 
     <div class="container-fluid findr" id="sectionFindr">
-        <h2>Findr</h2>
 
-        <div class="row-fluid">
+        <h2>Findr</h2>
+        <div class="row">
             <div class="col-md-5">
                 <p>
                     Findr is a simple yet very powerful utility that helps
@@ -123,7 +136,7 @@ new Findr(driver)           // create Findr
     </div>
 
     <div class="container-fluid stuff" id="sectionStuff">
-        <h2>Stuff</h2>
+        <h2>Goodies</h2>
         <p>Bla ksjd lksqdj lqj lkqsj lkdj lkdsjlkdsqj dlksqdj dlqkjqsdlkdqs lj </p>
     </div>
 </div>
