--- a/www2/index.html
+++ b/www2/index.html
@@ -23,15 +23,17 @@
 <div class="container-fluid cols">
     <div class="row">
         <div class="col-md-4 woko col text-center">
-            <img src="img/woko-white.png" style="width:50%"/>
+            <a href="#woko">
+                <img src="img/woko-white.png" style="width:50%"/>
+            </a>
         </div>
         <div class="col-md-4 findr col text-center">
-            <a href="#sectionFindr">
+            <a href="#findr">
                 <img src="img/findr-white.png" style="width:50%"/>
             </a>
         </div>
         <div class="col-md-4 stuff col text-center">
-            <a href="#sectionStuff">
+            <a href="#goodies">
                 <img src="img/goodies-white.png" style="width:50%"/>
             </a>
         </div>
@@ -40,9 +42,9 @@
 </div>
 
 <div class="content">
-    <div class="container-fluid woko" id="sectionWoko">
+    <div class="container-fluid woko" id="woko">
         <p>
-            Woko is a Full-Stack, Domain Driven Web Framework for the Java platform.
+            Woko is a Full-Stack, Domain-Driven Web Framework for the Java platform.
             It builds upon strong foundations and mixes in unique concepts, providing a
             developer experience that ain't so common in the Java landscape.
         </p>
@@ -79,7 +81,7 @@
                 <p>
                     Woko uses a unique, dynamic and powerful approach for automagically rendering
                     your POJOs. It can render any object by default (read or write), and lets
-                    you customize anything at will.
+                    you customize everything at will.
                 </p>
             </div>
             <div class="col-md-6">
@@ -94,15 +96,38 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-md-6">
+                <h3>
+                    Modular & Open
+                </h3>
+                <p>
+                    JavaBeans, Maven, Servlet, JSP, JPA... Woko relies on Open standards
+                    and technologies. Almost everything in Woko can be customized, or
+                    even replaced. We don't try to vendor-lock anyone.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <h3>
+                    Dev Friendly
+                </h3>
+                <p>
+                    Works fine in any IDE. Command-line for handling
+                    various stuff. IntelliJ IDEA plugin. Hot-deploy of code changes.
+                    Forget about your old JEE experiences : web dev on the Java Platform
+                    can actually be productive. It can even be funky !
+                </p>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-12 text-center more">
-                <a href="#">
+                <a href="http://woko.pojosontheweb.com">
                     Get Woko
                 </a>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid findr" id="sectionFindr">
+    <div class="container-fluid findr" id="findr">
 
         <h2>Findr</h2>
 
@@ -118,6 +143,7 @@
                 </p>
                 <ul>
                     <li>Thin layer over Selenium WebDriverWait</li>
+                    <li>Enforces async-friendly tests (polling)</li>
                     <li>Fluent, easy and enjoyable API</li>
                     <li>Allows for reuse (composition, immutable Findrs...)</li>
                     <li>Pure Java, extensions for Groovy</li>
@@ -190,93 +216,120 @@ $<span style="color: #666666">(</span><span style="color: #BA2121">&#39;#searchb
         </div>
         <div class="row">
             <div class="col-md-12 text-center more">
-                <a href="#">
-                    Learn More...
+                <a href="https://github.com/pojosontheweb/selenium-utils">
+                    Get Findr
                 </a>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid stuff" id="sectionStuff">
-        <h2>Goodies</h2>
+    <div class="stuff" id="goodies">
+        <div class="container-fluid">
+            <h2>Goodies</h2>
 
-        <p>
-            Here are a few other projects that we dig, maintain, or contribute
-            to.
-        </p>
+            <h3 id="rjar-logo">
+                <i> </i>
+                rjar
+                <small>Recursive Java Archive (jar) Tool</small>
+            </h3>
 
-        <div class="row">
-            <div class="col-md-6">
+            <p>
+                <code>rjar</code> is a command-line tool that acts like the regular
+                <code>jar</code> tool, but recursively ! It is very useful when e.g. using ear
+                or war files, or any other "jars of jars"...
+            </p>
 
-                <h3>rjar</h3>
+            <p>
+                Features :
+            </p>
+            <ul>
+                <li>
+                    list jar entries recursively : all entries are
+                    displayed including entries of nested jars if any
+                </li>
+                <li>
+                    expand a jar recursively : expand the jar and its nested
+                    jars to the specified directory
+                </li>
+                <li>
+                    recreate a jar from an expanded rjar : allows to rebuild a jar
+                    with nested jars from an expanded directory structure
+                </li>
+                <li>
+                    graphical front-end : tree view of your jars,
+                    with regexp filtering
+                </li>
+            </ul>
 
-                <p>
-                    Recursive Java Archive (jar) Tool
-                </p>
-
-                <p>
-                    <code>rjar</code> is a command-line tool that acts like the regular
-                    <code>jar</code> tool, but recursively ! It is very useful when e.g. using ear
-                    or war files, or any other "jars of jars"...
-                </p>
-
-                <p>
-                    Features :
-                </p>
-                <ul>
-                    <li>
-                        list jar entries recursively : all entries are
-                        displayed including entries of nested jars if any
-                    </li>
-                    <li>
-                        expand a jar recursively : expand the jar and its nested
-                        jars to the specified directory
-                    </li>
-                    <li>
-                        recreate a jar from an expanded rjar : allows to rebuild a jar
-                        with nested jars from an expanded directory structure
-                    </li>
-                    <li>
-                        graphical front-end : tree view of your jars,
-                        with regexp filtering
-                    </li>
-                </ul>
-
-                <div class="more">
-                    <a href="#">
-                        Learn More...
-                    </a>
-                </div>
-
-            </div>
-            <div class="col-md-6">
-
-                <h3>Stripes</h3>
-                <p>Stripes is the best Web MVC for Java.</p>
-                <p>
-                    It's compact, elegant, effective and fun to use.
-                    It has everything you need in order to build webapps :
-                </p>
-                <ul>
-                    <li>Kick-ass Data Binding & Validation</li>
-                    <li>Neat Controller model (ActionBeans)</li>
-                    <li>HTML Tag library (FORMs)</li>
-                    <li>Fully extensible</li>
-                </ul>
-                <blockquote>
-                    Because it doesn't have to suck !
-                </blockquote>
-
-                <div class="more">
-                    <a href="#">
-                        Learn More...
-                    </a>
-                </div>
-
+            <div class="more text-center">
+                <a href="https://github.com/pojosontheweb/rjar/blob/master/README.md">
+                    Get rjar
+                </a>
             </div>
         </div>
 
+        <hr>
+
+        <div class="container-fluid">
+
+            <h3>Stripes</h3>
+            <p>The best Web MVC for Java. Hands down.</p>
+            <p>
+                It's compact, elegant, effective and fun to use.
+                It has everything you need in order to build webapps :
+            </p>
+            <ul>
+                <li>Kick-ass Data Binding & Validation</li>
+                <li>Neat Controller model (ActionBeans)</li>
+                <li>HTML Tag library (FORMs)</li>
+                <li>Fully extensible</li>
+            </ul>
+            <p>
+                Because it doesn't have to suck !
+            </p>
+
+            <div class="text-center">
+                <div class="more">
+                    <a href="http://www.stripesframework.org">
+                        Learn More...
+                    </a>
+                </div>
+            </div>
+
+        </div>
     </div>
+</div>
+
+<div class="container">
+    <footer>
+        <div class="row">
+            <div class="col-md-4">
+                <h3>About</h3>
+                <p>
+                    slkdsm k k smdqk sqmdlk qsdmlkdqsm kmdk smdkq smldk ds
+                    sqdlkjsqd jdqs klsqdj lkdsqj lksj lksdj qslkj dslkdsj
+                    sqdlkjsq lkj sdqlksjdkl d
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h3>Projects</h3>
+                <ul>
+                    <li>Woko</li>
+                    <li>Findr</li>
+                    <li>rjar</li>
+                    <li>Stripes</li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h3>Contact</h3>
+                <ul>
+                    <li><a href="https://groups.google.com/forum/?fromgroups#!forum/pojosontheweb">Google group</a></li>
+                    <li><a href="mailto:contact@pojosontheweb.com">contact@pojosontheweb.com</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
 </div>
 
 
