more website (docs)

--- a/www.woko/src/top-nav.include.html
+++ b/www.woko/src/top-nav.include.html
@@ -13,10 +13,9 @@ HTML header:  <meta name="google-site-verification" content="KuGGUij04tpkJKwI3ZN
 
 <div id="top-nav hidden-print">
     <ul class="nav nav-pills" id="top-nav">
-        <li class="${name=='index' ? 'active' : ''}">
-            <a href="http://pojosontheweb.com">
-                <span class="glyphicon glyphicon-home"> </span>
-                Home
+        <li>
+            <a class="wbrand" href="index.html">
+                <img alt="Woko" src="woko_48.png"/>
             </a>
         </li>
         <li class="${name=='download' ? 'active' : ''}">
@@ -64,7 +63,7 @@ HTML header:  <meta name="google-site-verification" content="KuGGUij04tpkJKwI3ZN
                 <li>
                     <a href="http://ci.rvkb.com/job/woko-develop/">
                         <span class="glyphicon glyphicon-repeat"> </span>
-                        Jenkins CI
+                        C.I. Builds
                     </a>
                 </li>
             </ul>
