--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,15 @@
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link href="css/styles.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates|Open+Sans|Freckle+Face|Faster+One' rel='stylesheet' type='text/css'></head>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates|Open+Sans|Freckle+Face|Faster+One' rel='stylesheet' type='text/css'>
+
+    <meta property="og:image" content="http://pojosontheweb.com/img/woko-couilla.png"/>
+    <meta property="og:title" content="POJOs on the Web!"/>
+    <meta property="og:url" content="http://pojosontheweb.com"/>
+    <meta property="og:site_name" content="POJOs on the Web!"/>
+    <meta property="og:description" content="Open-Source food for the Java Platform."/>
+
+</head>
 <body>
 
 <div class="jumbotron">
@@ -123,6 +131,13 @@
                 </a>
             </div>
         </div>
+
+        <div class="pull-right">
+            <a href="#" class="back-to-top">
+                to top &#x2191;
+            </a>
+        </div>
+
     </div>
 
     <div class="container-fluid findr" id="findr">
@@ -219,6 +234,13 @@ $<span style="color: #666666">(</span><span style="color: #BA2121">&#39;#searchb
                 </a>
             </div>
         </div>
+
+        <div class="pull-right">
+            <a href="#" class="back-to-top">
+                to top &#x2191;
+            </a>
+        </div>
+
     </div>
 
     <div class="stuff" id="goodies">
@@ -228,8 +250,8 @@ $<span style="color: #666666">(</span><span style="color: #BA2121">&#39;#searchb
             <h3 id="rjar-logo">
                 <i> </i>
                 rjar
-                <small>Recursive Java Archive (jar) Tool</small>
             </h3>
+            <h3 id="rjar-slogan"><small>Recursive Java Archive (jar) Tool</small></h3>
 
             <p>
                 <code>rjar</code> is a command-line tool that acts like the regular
@@ -264,6 +286,7 @@ $<span style="color: #666666">(</span><span style="color: #BA2121">&#39;#searchb
                     Get rjar
                 </a>
             </div>
+
         </div>
 
         <hr>
@@ -292,6 +315,12 @@ $<span style="color: #666666">(</span><span style="color: #BA2121">&#39;#searchb
                         Learn More...
                     </a>
                 </div>
+            </div>
+
+            <div class="pull-right">
+                <a href="#" class="back-to-top">
+                    to top &#x2191;
+                </a>
             </div>
 
         </div>
@@ -337,19 +366,22 @@ $<span style="color: #666666">(</span><span style="color: #BA2121">&#39;#searchb
                 </ul>
             </div>
         </div>
-        <div class="more text-center">
-            <a href=".">
-                Back to top &#x2191;
-            </a>
+
+        <div class="text-center share-page">
+            <!-- Go to www.addthis.com/dashboard to customize your tools -->
+            <div class="addthis_sharing_toolbox"></div>
         </div>
+
     </footer>
 
 </div>
 
-
-
 <!-- script references -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52c559ca4187c165" async="async"></script>
+
 </body>
 </html>
